--- a/PFA/interface/templates/filled_sections.html
+++ b/PFA/interface/templates/filled_sections.html
@@ -1,3 +1,6 @@
+{% extends "base.html" %}
+
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -40,4 +43,4 @@
 
 </body>
 </html>
-
+{% endblock %}
