--- a/PFA/interface/templates/home.html
+++ b/PFA/interface/templates/home.html
@@ -4,41 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Incident Report</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
 </head>
+{% extends "base.html" %}
 
-<body class="bg-gray-100">
-    <div class="container mx-auto mt-8">
-        <div class="max-w-lg mx-auto bg-white shadow-md rounded-md p-8">
-            <h1 class="text-2xl font-semibold text-gray-800 mb-4">Incident Report</h1>
-            <form action="{% url 'interface:fill_sections' %}" method="post" >
+{% block content %}
+<div class="container mx-auto mt-8">
+    <div class="max-w-lg mx-auto bg-white shadow-md rounded-md p-8">
+        <h1 class="text-2xl font-semibold text-gray-800 mb-4">Incident Report</h1>
+        <form action="{% url 'interface:fill_sections' %}" method="post">
             {% csrf_token %}
-                <div class="mb-4">
-                    <label for="incident-type" class="block text-sm font-medium text-gray-700">Incident Type</label>
-                    <select id="incident-type" name="incident-type"
-                        class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50">
-                    
-                    </select>
-                </div>
-                <div class="mb-4">
-                    <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
-                    <select id="country" name="country"
-                        class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50">
-                        <option value="" disabled selected>Select a country</option>
-                    </select>
-                </div>
+            <div class="mb-4">
+                <label for="incident-type" class="block text-sm font-medium text-gray-700">Incident Type</label>
+                <select id="incident-type" name="incident-type"
+                    class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50">
+                </select>
+            </div>
+            <div class="mb-4">
+                <label for="country" class="block text-sm font-medium text-gray-700">Country</label>
+                <select id="country" name="country"
+                    class="mt-1 block w-full border-gray-300 rounded-md shadow-sm focus:border-blue-500 focus:ring focus:ring-blue-500 focus:ring-opacity-50">
+                    <option value="" disabled selected>Select a country</option>
+                </select>
+            </div>
 
-                <div class="flex justify-end">
-                    <button type="submit"
-                        class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Submit</button>
-                </div>
-            </form>
-        </div>
+            <div class="flex justify-end">
+                <button type="submit"
+                    class="px-4 py-2 bg-blue-500 text-white rounded-md hover:bg-blue-600 focus:outline-none focus:bg-blue-600">Submit</button>
+            </div>
+        </form>
     </div>
-</body>
+</div>
 
-</html>
 
 <script>
     const selectCountry = document.getElementById("country");
@@ -85,3 +82,7 @@
         selectCountry.appendChild(option);
     });
 </script>
+{% endblock %}
+
+
+</html>
