--- a/PFA/mapping/templates/base.html
+++ b/PFA/mapping/templates/base.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,46 +8,59 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     {% block styles %}{% endblock %}
 </head>
+
 <body>
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-activity" viewBox="0 0 16 16">
-        <path fill-rule="evenodd" d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2"/>
-    </svg>
-    <a class="navbar-brand" href="{% url 'chatbot:chatbot_home' %}" style="color: red;">&nbsp Kit AI</a>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'chatbot:chatbot_home' %}" style="color: red;">Chat<span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'mapping' %}" style="color: red;">Map<span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'interface:home' %}" style="color: red;">Emergency And Supplies<span class="sr-only"></span></a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'chatbot:chatbot_home' %}" style="color: red;">Supplies<span class="sr-only"></span></a>
-            </li>
-        </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <a class="nav-link" href="{% url 'users:edit_profile' %}" style="color: red;">Account<span class="sr-only"></span></a>
-            <button class="btn btn my-2 my-sm-0" type="submit" href="{% url 'users:logout' %}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" fill="red" class="bi bi-power" viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M7.5 1v7h1V1z"/>
-                    <path fill-rule="evenodd" d="M3 8.812a5 5 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812"/>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="red" class="bi bi-activity"
+            viewBox="0 0 16 16">
+            <path fill-rule="evenodd"
+                d="M6 2a.5.5 0 0 1 .47.33L10 12.036l1.53-4.208A.5.5 0 0 1 12 7.5h3.5a.5.5 0 0 1 0 1h-3.15l-1.88 5.17a.5.5 0 0 1-.94 0L6 3.964 4.47 8.171A.5.5 0 0 1 4 8.5H.5a.5.5 0 0 1 0-1h3.15l1.88-5.17A.5.5 0 0 1 6 2" />
+        </svg>
+        <a class="navbar-brand" href="{% url 'chatbot:chatbot_home' %}" style="color: red;">&nbsp Kit AI</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'chatbot:chatbot_home' %}" style="color: red;">Chat<span
+                            class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'mapping' %}" style="color: red;">Map<span
+                            class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'interface:home' %}" style="color: red;">Emergency And
+                        Supplies<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'chatbot:chatbot_home' %}" style="color: red;">Supplies<span
+                            class="sr-only"></span></a>
+                </li>
+
+
+            </ul>
+
+            <a class="nav-link" href="{% url 'users:edit_profile' %}" style="color: red;">Account<span
+                    class="sr-only"></span></a>
+
+            <a class="btn btn my-2 my-sm-0" href="{% url 'users:logout' %}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" fill="red" class="bi bi-power"
+                    viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M7.5 1v7h1V1z" />
+                    <path fill-rule="evenodd"
+                        d="M3 8.812a5 5 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812" />
                 </svg>
-            </button>
-        </form>
-    </div>
-</nav>
+            </a>
+        </div>
+    </nav>
 
-{% block content %}{% endblock %}
+    {% block content %}{% endblock %}
 
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-{% block scripts %}{% endblock %}
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    {% block scripts %}{% endblock %}
 
 </body>
+
 </html>
