--- a/PFA/mapping/templates/base.html
+++ b/PFA/mapping/templates/base.html
@@ -21,6 +21,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
+                    <a class="nav-link" href="{% url 'home' %}" style="color: red;">Home<span
+                            class="sr-only"></span></a>
+                </li>
+                <li class="nav-item active">
                     <a class="nav-link" href="{% url 'chatbot:chatbot_home' %}" style="color: red;">Chat<span
                             class="sr-only"></span></a>
                 </li>
@@ -32,29 +36,29 @@
                     <a class="nav-link" href="{% url 'interface:home' %}" style="color: red;">Emergency And
                         Supplies<span class="sr-only"></span></a>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link" href="{% url 'chatbot:chatbot_home' %}" style="color: red;">Supplies<span
-                            class="sr-only"></span></a>
-                </li>
+
 
 
             </ul>
 
-            <a class="nav-link" href="{% url 'users:edit_profile' %}" style="color: red;">Account<span
-                    class="sr-only"></span></a>
+            <ul>
+                <li>
+                    <a class="nav-link" href="{% url 'users:edit_profile' %}" style="color: red;">Account<span
+                            class="sr-only"></span></a>
+                </li>
+                <li>
+                    <a class="nav-link" href="{% url 'users:logout' %}" style="color: red;">Logout<span
+                            class="sr-only"></span></a>
+                </li>
+            </ul>
 
-            <a class="btn btn my-2 my-sm-0" href="{% url 'users:logout' %}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="25" fill="red" class="bi bi-power"
-                    viewBox="0 0 16 16">
-                    <path fill-rule="evenodd" d="M7.5 1v7h1V1z" />
-                    <path fill-rule="evenodd"
-                        d="M3 8.812a5 5 0 0 1 2.578-4.375l-.485-.874A6 6 0 1 0 11 3.616l-.501.865A5 5 0 1 1 3 8.812" />
-                </svg>
-            </a>
         </div>
     </nav>
 
-    {% block content %}{% endblock %}
+    <div class="container">
+        {% block content %}
+        {% endblock %}
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
