--- a/PFA/chatbot/templates/chatbot.html
+++ b/PFA/chatbot/templates/chatbot.html
@@ -2,14 +2,10 @@
 
 {% block styles %}
 <style>
-  .bg-custom {
-    background-color: #b94343;
-  }
   body,
   html {
     height: 100%;
   }
-  
 
   .messages-box {
     flex: 1;
@@ -31,13 +27,15 @@
   }
 
   .sent {
-    background-color: #b94343;
+    background-color: #e03b4e;
     align-self: flex-end;
+    border-radius: 20px;
   }
 
   .received {
     background-color: #f1f0f0;
     align-self: flex-start;
+    border-radius: 20px;
   }
 
   .message-form {
@@ -47,7 +45,7 @@
     left: 0;
     right: 0;
     padding: 10px;
-    background-color: #b94343;
+    background-color: #f8f9fa;
   }
 
   .message-input {
@@ -58,12 +56,27 @@
 
   .btn-send {
     border-radius: 0;
+    background-color: transparent;
+    color: #e03b4e;
+    border: none;
+    font-size: 20px;
   }
+   .container-fluid {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
 
   .chat-container {
+    width: 100%;
     height: 100%;
     display: flex;
+    flex :1;
     flex-direction: column;
+  }
+  .bg-red {
+    margin-top: 10px;
+    background-color: #e03b4e;
   }
 </style>
 {% endblock %}
@@ -74,7 +87,7 @@
 </div>
 <div class="chat-container">
   <div class="card flex-grow-1">
-    <div class="card-header bg-custom text-white">Chat</div>
+    <div class="card-header bg-red text-white">Chat</div>
     <div class="card-body messages-box">
     <ul class="list-unstyled messages-list">
         {% for chat in chats %}
