--- a/PFA/mapping/templates/mapping.html
+++ b/PFA/mapping/templates/mapping.html
@@ -58,7 +58,7 @@
 
                 console.log(lat, lon);
 
-                mapboxgl.accessToken = 'pk.eyJ1Ijoic3RhcmxvcmQ2NjciLCJhIjoiY2x2azBsbzM4MGJwazJpbXdmanIwZXhzcCJ9.8S77IlwdvfjxfBeKxJpyGQ';
+                mapboxgl.accessToken = 'API_KEY'; // FILL IN WITH THE API KEY
                 const map = new mapboxgl.Map({
                     container: 'map',
                     // Choose from Mapbox's core styles, or make your own style with Mapbox Studio
